--- a/application/views/admin/index.phtml
+++ b/application/views/admin/index.phtml
@@ -1,1 +1,31 @@
-<h1>Это Админка</h1>
+<?/*
+<p><a class="btn" href="/admin/add">Добавить</a></p>
+
+
+<? if($e_list) :?>
+	
+	<table class="table table-striped">
+		<thead>
+		<tr>
+			<th>Вид документа</th>
+			<th>Дата</th>
+			<th></th>
+			<th></th>
+			<th></th>
+		</tr>
+		</thead>
+		<tbody>
+		<? foreach($e_list as $items) :?>
+		<tr>
+			<td><?= $items['name'] ?></td>
+			<td><?= $items['created'] ?></td>
+			<td><a href="/data/items/<?= $items['file'] ?>"><img src="/img/but.jpg" alt="" title="" /></a></td>
+			<td><a class="btn btn-info" href="/admin/edit?id=<?= $items['id'] ?>">Редактировать</a><td>
+			<td><a class="btn btn-danger" href="/admin/delete?id=<?= $items['id'] ?>">Удалить</a><td>
+		</tr>
+		<? endforeach; ?>	
+		</tbody>
+</table>
+
+<? endif; ?>
+*/?>
