--- a/application/layouts/admin.phtml
+++ b/application/layouts/admin.phtml
@@ -9,7 +9,7 @@
     <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- <link href="/admin/css/bootstrap-responsive.min.css" rel="stylesheet"> -->
     
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script type="text/javascript" src="/js/jquery-1.7.1.js"></script>
     <script src="/bootstrap/js/bootstrap.min.js"></script>
 	
 	<script type="text/javascript" src="/js/redactor/redactor.js"></script>
