--- a/application/views/_js.phtml
+++ b/application/views/_js.phtml
@@ -1,5 +1,5 @@
 	
-	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+	<script type="text/javascript" src="/js/jquery-1.7.1.js"></script>
 	<script type="text/javascript" src="/bootstrap/js/bootstrap.js"></script>
 	<script type="text/javascript" src="/js/jquery.cookie.js"></script>
 
