--- a/application/views/_css.phtml
+++ b/application/views/_css.phtml
@@ -1,3 +1,2 @@
 
-	<link href="/bootstrap/css/bootstrap.css" rel="stylesheet">	
-	<link href="/css/layout.css" rel="stylesheet">	
+	<link href="/css/main.css" rel="stylesheet">	
