--- a/www/css/layout.css
+++ b/www/css/layout.css
@@ -94,8 +94,14 @@ footer {
 
 /* ============ MEDIA всегда должно быть ниже остальных стилей  ============== */
 
+/* Large desktop
+------------------------- */
+@media (min-width: 1200px) { 
 
-/* Tablet to desktop
+
+}
+
+/* Portrait tablet to landscape and desktop
 ------------------------- */
 @media (min-width: 768px) and (max-width: 979px) {
 	body {
@@ -108,7 +114,7 @@ footer {
 	
 }
 
-/* Tablet
+/* Landscape phone to portrait tablet
 ------------------------- */
 @media (max-width: 767px) {
 	body {
@@ -125,7 +131,7 @@ footer {
 	}
 }
 
-/* Landscape phones
+/* Landscape phones and down
 ------------------------- */
 @media (max-width: 480px) {
 	body {
